
To have ri data for you gems you'll also need to run:

  gem rdoc --all --overwrite

If you don't want to rebuild the rdoc for `gem server`, add --no-rdoc.

* Minor Enhancements
  * Unrecognized RDoc directives can now be registered by a plugin for
    handling.  See RDoc::Markup::PreProcess.
  * Added RDoc::Markup::Raw to allow other markup engines to dump raw content
    into RDoc.

=== 2.5.6 / 2010-04-22

* Minor Enhancements
  * Unrecognized RDoc directives are added as metadata to the object they get
    attached to.

      ##
      # :my_new_directive: my cool value

    Results in a 'my_new_directive' metadata key with value 'my cool value' on
    the RDoc::CodeObject it is for
* Bug Fixes
  * RDoc no longer prints out "invalid options:" when there were no invalid
    options.
  * Fixed link size on Darkfish file pages

=== 2.5.5 / 2010-04-19

* 1 Minor Enhancement
  * Use #binread in RDoc::Markup::PreProcess.  Patch from ruby trunk.
* 3 Bug Fixes
  * Fixed indentation of method-description lists in Darkfish.  Bug #28081 by
    Theresa Dwinnell.
  * Fixed loading RDoc::AnyMethod aliases to no longer infinitely loop.  Bug
    #28107 by Sven Riedel
  * Fixed handling of ignored invalid options to continue after the invalid
    option.

=== 2.5.4 / 2010-04-18

* 2 Minor Enhancements
  * Methods will now be cross-referenced when preceeded with ::.  Ruby Bug
    #3169 by Marc-Andre Lafortune.
  * Methods now have human readable fragment identifiers for HTML output.
    (#method-i-gsub vs #M000005).  Ruby Bug #3023 by Marc-Andre Lafortune.
* 1 Bug Fixes
  * RDoc::Parser::Ruby now handles <code>while begin a; b end # ...</code>.
    Ruby Bug #3160 by Yusuke Endoh.

=== 2.5.3 / 2010-04-10

* 1 Minor Enhancement
  * RDoc::Parser::Simple and the include directive remove coding: comment from
    first line
* 2 Bug Fixes
  * Fixed loading of created.rid when regenerating documentation.  Ruby bug
    #3121 by Yusuke Endoh.